--- a/sites/all/themes/s2015/sass/components/_bof.scss
+++ b/sites/all/themes/s2015/sass/components/_bof.scss
@@ -52,6 +52,10 @@
         }
     }
 
+    .imported-content-p > a {
+        margin-top: 0; 
+    }
+
 }
 
 .birds-of-a-feather-day-links {
